wip: new graphs by plotly

--- a/.github/workflows/commits-rework-rate.yml
+++ b/.github/workflows/commits-rework-rate.yml
@@ -30,7 +30,7 @@ jobs:
           python-version: '3.9'
 
       - name: 📦 Instalar dependências
-        run: pip install requests pandas matplotlib
+        run: pip install requests pandas matplotlib plotly
 
       - name: 🚀 Rodar análise de retrabalho
         env:
