--- a/.github/workflows/commits-rework-rate.yml
+++ b/.github/workflows/commits-rework-rate.yml
@@ -15,6 +15,12 @@ on:
         description: 'Número mínimo de alterações para contar como retrabalho'
         required: true
         default: '3'
+      start_date:
+        description: 'Data inicial (YYYY-MM-DD) - Deixe em branco para analisar tudo'
+        required: false
+      end_date:
+        description: 'Data final (YYYY-MM-DD) - Deixe em branco para analisar até hoje'
+        required: false
 
 jobs:
   analyze_rework:
@@ -30,7 +36,7 @@ jobs:
           python-version: '3.9'
 
       - name: 📦 Instalar dependências
-        run: pip install requests pandas matplotlib plotly
+        run: pip install requests pandas matplotlib plotly kaleido
 
       - name: 🚀 Rodar análise de retrabalho
         env:
@@ -40,14 +46,16 @@ jobs:
           export OWNER="Tech-Tweakers"
           export REPO=${{ github.event.inputs.repo }}
           export THRESHOLD=${{ github.event.inputs.threshold }}
-          
+          export START_DATE=${{ github.event.inputs.start_date || '2000-01-01' }}  # Padrão: tudo
+          export END_DATE=${{ github.event.inputs.end_date || github.event.created_at }}
+
+          echo "📅 Analisando commits de $START_DATE até $END_DATE"
           python main.py
 
       - name: 💾 Salvar resultado no repositório
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'actions@github.com'
-          git add .|| echo "⚠️ Nada para adicionar"
+          git add . || echo "⚠️ Nada para adicionar"
           git commit -m "🔄 Atualizando métricas de retrabalho" || echo "⚠️ Nenhuma alteração para commitar"
           git push || echo "⚠️ Nenhuma alteração para push"
-
