--- a/.github/workflows/commits-rework-rate.yml
+++ b/.github/workflows/commits-rework-rate.yml
@@ -46,7 +46,7 @@ jobs:
           export OWNER="Tech-Tweakers"
           export REPO=${{ github.event.inputs.repo }}
           export THRESHOLD=${{ github.event.inputs.threshold }}
-          export START_DATE=${{ github.event.inputs.start_date || '2000-01-01' }}  # Padrão: tudo
+          export START_DATE=${{ github.event.inputs.start_date || '2000-01-01' }}
           export END_DATE=${{ github.event.inputs.end_date || '' }}
 
           echo "📅 Analisando commits de $START_DATE até $END_DATE"
