--- a/.github/workflows/code-churn.yml
+++ b/.github/workflows/code-churn.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add data/repos/code_churn_*.json
+          git add static/data/repos/code_churn_*.json
           git commit -m "📊 Atualiza análise de code churn"
           git push
